package variables;

option java_package = "org.signalml.peer.protocol";
option java_outer_classname = "SvarogProtocol";

message Variable {
    required string key = 1;
    required string value = 2;
}

message VariableVector {
	repeated Variable variables = 1;
}

message Tag {
	required double start_timestamp = 1;
	required double end_timestamp = 2;
	required string name = 3;
	required string channels = 4;
	optional VariableVector desc = 5;
}
